Modificando backend, tirando partes não utilizadas no codigo